# GNC-Project

./: .gitignore  README.md
config/: mission_config.yaml
database/: schema.sql
docs/: GNC_Mission_Report.tex  INTERVIEW_PREP_GUIDE.md  INTERVIEW_PREP_GUIDE.tex  MISSION_TIMING_ANALYSIS.md  design_document.md
excel/: mission_parameters.csv
scripts/: run_full_sim.sh  run_tests.sh  setup.sh
simulink/: GNC_Advanced_Init.m  GNC_System.slx  GNC_System_Init.m  README.md  build_advanced_model.m  build_gnc_model.m  generate_report_figures.m  run_and_plot.m  run_simulation.m
simulink/functions/: attitude_controller.m  ekf_update.m  euler_dynamics.m  gravity_model.m  quat_mult.m  quat_to_dcm.m
src/: main.py
src/autonomy/: __init__.py
src/control/: __init__.py  actuators.py
src/core/: __init__.py  constants.py  quaternion.py
src/cpp/include/: dynamics_engine.h  ring_buffer.h  rocket_dynamics.h
src/cpp/src/: dynamics_engine.cpp  flight_computer.cpp  hil_interface.cpp  main.cpp  ring_buffer.cpp  rocket_dynamics.cpp
src/database/: telemetry_db.py
src/dynamics/: __init__.py  environment.py  launch_vehicle.py  spacecraft.py
src/fsw/: CMakeLists.txt
src/fsw/include/: flight_computer.h  hil_interface.h  memory_pool.h
src/fsw/src/: memory_pool.cpp
src/guidance/: maneuver_planner.py  mission_planner.py  trajectory_opt.py
src/matlab/: control_design.m  generate_plots.m  trajectory_analysis.m
src/navigation/: __init__.py  signal_model.py
src/optimization/: __init__.py  mdo.py  trajectory_optimization.py
src/python/: main.py
src/python/autonomy/: anomaly_detection.py  attitude_predictor.py  auto_trajectory.py
src/python/control/: attitude_control.py  optimal_control.py  orbit_control.py
src/python/core/: constants.py  data_structures.py  frames.py
src/python/database/: __init__.py
src/python/dynamics/: attitude_dynamics.py  launch_vehicle.py  orbital_mechanics.py
src/python/guidance/: __init__.py  mission_planner.py
src/python/navigation/: ekf.py  sensors.py  ukf.py
src/python/optimization/: mdo.py  trajectory_optimization.py
src/python/performance/: __init__.py  benchmarks.py  cache_optimizer.py  parallel.py
src/python/simulation/: __init__.py  sil_interface.py  sim_engine.py
src/python/tests/: test_control.py  test_integration.py  test_performance.py
src/python/trade_studies/: attitude_trade.py  plot_utils.py  propulsion_trade.py
src/python/visualization/: trajectory_plots.py
src/simulation/: bayesian.py  monte_carlo.py  sim_engine.py
src/tests/: test_ekf.py  test_orbital.py  test_quaternion.py
src/tools/matlab/: control_design.m  generate_plots.m  trajectory_analysis.m
src/tools/simulink/: attitude_control_model.m
src/trade_studies/: __init__.py  propulsion_trade.py
src/visualization/: trajectory_plots.py
